[Right Widget] Fix bug that right widget's left side is shown a little when page being loaded on mobile web.

--- a/_sass/custom/_mywidget.scss
+++ b/_sass/custom/_mywidget.scss
@@ -38,7 +38,7 @@
     position: fixed;
     display: flex;
     top: calc(#{$mymasthead-height});
-    right: 0;
+    right: -999px;
     z-index: 99;
     -webkit-transition: right 200ms linear;
     -moz-transition: right 200ms linear;
